--- a/src/desktop.less
+++ b/src/desktop.less
@@ -1,5 +1,6 @@
 @import "reset";
 @import "vars";
+@import "elements/icons";
 @import "elements/label";
 @import "elements/button";
 @import "elements/select";
