--- a/src/views/panel.less
+++ b/src/views/panel.less
@@ -13,7 +13,7 @@
     flex-flow: column;
     border: 1px solid @borderColor1;
 
-    .header {
+    > .header {
         .panelHeaderBgColor;
         padding: @panelHeaderPadding;
         color: @textColor2;
@@ -22,7 +22,7 @@
         text-shadow: @textShadow;
     }
 
-    .content {
+    > .content {
         flex: 1;
         position: relative;
         background: @panelContentBgColor;
