--- a/src/workspace.less
+++ b/src/workspace.less
@@ -7,6 +7,7 @@ html, body {
     overflow: hidden;
     font-family: @fontFamily;
     font-size: 11px;
+    text-shadow: @textShadow;
 }
 
 .workspace {
