add webkit scrollbar

--- a/src/workspace.less
+++ b/src/workspace.less
@@ -10,6 +10,29 @@ html, body {
     text-shadow: @textShadow;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+::-webkit-scrollbar-button {
+}
+::-webkit-scrollbar-track {
+    background: @sectionBgColor6;
+}
+::-webkit-scrollbar-track-piece {
+
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: @sectionBgColor4;
+}
+::-webkit-scrollbar-corner {
+    background: @sectionBgColor6;
+}
+::-webkit-resizer {
+
+}
+
 .workspace {
     position: relative;
     width: 100%;
