--- a/src/vars.less
+++ b/src/vars.less
@@ -7,6 +7,7 @@
 @sectionBgColor3: #464646;
 @sectionBgColor4: #535353;
 @sectionBgColor5: #606060;
+@sectionBgColor6: #707070;
 
 @sectionGradientBgColor: -webkit-gradient(linear,center top,center bottom,from(#3b3b3b), to(#373737));
 @sectionGradientBgColor1: @sectionGradientBgColor;
