--- a/src/workspace.less
+++ b/src/workspace.less
@@ -17,7 +17,7 @@ html, body {
 ::-webkit-scrollbar-button {
 }
 ::-webkit-scrollbar-track {
-    background: @sectionBgColor6;
+    background: @sectionBgColor7;
 }
 ::-webkit-scrollbar-track-piece {
 
@@ -25,6 +25,9 @@ html, body {
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background: @sectionBgColor4;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: @sectionBgColor3;
 }
 ::-webkit-scrollbar-corner {
     background: @sectionBgColor6;
