--- a/src/elements/input.less
+++ b/src/elements/input.less
@@ -48,3 +48,12 @@
     background: none;
     box-shadow: none;
 }
+
+.input[type='range'], input[type='range'] {
+    padding: 0;
+    border: none;
+    background: none;
+    box-shadow: none;
+    height: 1px;
+    vertical-align: middle;
+}
