--- a/src/workspace.less
+++ b/src/workspace.less
@@ -48,12 +48,12 @@ html, body {
     font-family: @fontFamily;
     font-size: 12px;
 
-    > .menus {
+    > .commands {
         padding: 0 0 0 10px;
         background: @sectionBgColor2;
         border-bottom: 1px solid @borderColor1;
 
-        > .menu {
+        > .item {
             display: inline-block;
             background: @sectionBgColor2;
             border-left: 1px solid @sectionBgColor2;
