--- a/src/vars.less
+++ b/src/vars.less
@@ -44,3 +44,12 @@
 
 @inputBgColor: #3a3a3a;
 @inputFocusBgColor: #ffffff;
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
