--- a/src/elements/menu.less
+++ b/src/elements/menu.less
@@ -1,9 +1,9 @@
 .menu {
-    box-shadow: 0 0 15px @sectionBgColor1;
+    box-shadow: 0 4px 20px @sectionBgColor2;
     border: 1px solid @borderColor2;
     border-radius: @borderRadius2;
     min-width: 150px;
-    padding: 3px 0px 3px 0px;
+    padding: 5px 0px 5px 0px;
     background: @sectionBgColor5;
     color: @textColor1_5;
 
