update: selection & active bg color of menu

--- a/src/vars.less
+++ b/src/vars.less
@@ -1,4 +1,6 @@
 @baseBgColor: #282828;
+@selectionBgColor: hsl(213, 24%, 57%);
+@activeBgColor: darken(hsl(213, 24%, 57%), 5%);
 
 @sectionBgColor0: #202020;
 @sectionBgColor1: @baseBgColor;
