--- a/src/elements/menu.less
+++ b/src/elements/menu.less
@@ -15,11 +15,14 @@
         padding: 5px 7px 5px 32px;
 
         &:hover {
-            background: @sectionBgColor4;
+            color: @textColor1;
+            background: @selectionBgColor;
+            cursor: default;
         }
 
         &:active {
-            background: @sectionBgColor3;
+            color: @textColor1;
+            background: @activeBgColor;
         }
 
         .icon {
