update label hover style

--- a/src/elements/label.less
+++ b/src/elements/label.less
@@ -5,7 +5,7 @@
     margin: 0;
     background: transparent;
     border: 1px solid transparent;
-    color: @textColor2;
+    color: @textColor1_5;
     padding: 2px 5px 2px 5px;
     min-width: 24px;
     outline: none;
