--- a/src/vars.less
+++ b/src/vars.less
@@ -2,6 +2,8 @@
 @selectionBgColor: hsl(213, 24%, 57%);
 @activeBgColor: darken(hsl(213, 24%, 57%), 5%);
 
+@baseFontSize: 12px;
+
 @sectionBgColor0: #202020;
 @sectionBgColor1: @baseBgColor;
 @sectionBgColor2: #343434;
