update menu style

--- a/src/elements/menu.less
+++ b/src/elements/menu.less
@@ -1,7 +1,9 @@
 .menu {
-    box-shadow: 0 4px 20px @sectionBgColor2;
+    position: absolute;
+    box-shadow: 0 4px 20px @sectionBgColor3;
     border: 1px solid @borderColor2;
-    border-radius: @borderRadius2;
+    border-top: 1px solid @borderColor4;
+    border-left: 1px solid @borderColor4;
     min-width: 150px;
     padding: 5px 0px 5px 0px;
     background: @sectionBgColor5;
