--- a/src/vars.less
+++ b/src/vars.less
@@ -31,6 +31,7 @@
 @borderRadius: 2px;
 @borderRadius1: 1px;
 @borderRadius2: @borderRadius;
+@borderRadius3: 3px;
 
 @textColor: #fffde6;
 @textColor0: #ffffff;
