add progress style

--- a/src/desktop.less
+++ b/src/desktop.less
@@ -5,6 +5,7 @@
 @import "elements/button";
 @import "elements/select";
 @import "elements/input";
+@import "elements/progress";
 @import "elements/menu";
 @import "views/panel";
 @import "views/tab";
