--- a/src/vars.less
+++ b/src/vars.less
@@ -3,6 +3,8 @@
 @activeBgColor: darken(hsl(213, 24%, 57%), 5%);
 
 @baseFontSize: 12px;
+@smallFontSize: 11px;
+@largeFontSize: 14px;
 
 @sectionBgColor0: #202020;
 @sectionBgColor1: @baseBgColor;
