add transition to progress

--- a/src/elements/progress.less
+++ b/src/elements/progress.less
@@ -24,6 +24,8 @@
         text-align: right;
         font-size: @smallFontSize;
         cursor: default;
+        transition: width .2s ease;
+
         .noselect;
     }
 }
