--- a/src/elements/menu.less
+++ b/src/elements/menu.less
@@ -1,6 +1,8 @@
+@import "../vars";
+
 .menu {
     position: absolute;
-    box-shadow: 0 4px 20px @sectionBgColor3;
+    box-shadow: 0 4px 20px @sectionBgColor1;
     border: 1px solid @borderColor2;
     border-top: 1px solid @borderColor4;
     border-left: 1px solid @borderColor4;
@@ -8,18 +10,23 @@
     padding: 5px 0px 5px 0px;
     background: @sectionBgColor5;
     color: @textColor1_5;
+    z-index: 999;
 
     > .item {
         .noselect;
 
         position: relative;
         cursor: default;
-        padding: 5px 7px 5px 32px;
+        padding: 5px 32px 5px 32px;
 
         &:hover {
             color: @textColor1;
             background: @selectionBgColor;
             cursor: default;
+
+            > .menu {
+                display: block;
+            }
         }
 
         &:active {
@@ -27,10 +34,20 @@
             background: @activeBgColor;
         }
 
-        .icon {
+        > .icon {
             position: absolute;
             left: 10px;
             margin-top: 1px;
+        }
+
+        &.group::after {
+            font-family: 'Icons';
+            position: absolute;
+            right: 7px;
+            top: 7px;
+            display: inline-block;
+            content: "\f0da";
+            color: @textColor2;
         }
 
         &.disabled {
@@ -42,6 +59,13 @@
         &.disabled:hover, &.disabled:active {
             color: @textColor4;
             background: transparent
+        }
+
+        > .menu {
+            display: none;
+            left: 100%;
+            top: 0;
+            margin-left: 2px;
         }
     }
 
