--- a/src/workspace.less
+++ b/src/workspace.less
@@ -17,17 +17,17 @@ html, body {
 ::-webkit-scrollbar-button {
 }
 ::-webkit-scrollbar-track {
-    background: @sectionBgColor7;
+    background: @sectionBgColor6;
 }
 ::-webkit-scrollbar-track-piece {
 
 }
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background: @sectionBgColor4;
+    border-radius: 2px;
+    background: @sectionBgColor2_5;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background: @sectionBgColor3;
+    background: @sectionBgColor2;
 }
 ::-webkit-scrollbar-corner {
     background: @sectionBgColor6;
@@ -123,5 +123,6 @@ html, body {
         flex: 1;
         border-top: 1px solid @borderColor4;
         box-sizing: border-box;
+        background: @sectionBgColor2_5;
     }
 }
