--- a/src/vars.less
+++ b/src/vars.less
@@ -1,6 +1,6 @@
 @baseBgColor: #282828;
-@selectionBgColor: hsl(213, 24%, 57%);
-@activeBgColor: darken(hsl(213, 24%, 57%), 5%);
+@selectionBgColor: #375670;
+@activeBgColor: darken(@selectionBgColor, 5%);
 
 @baseFontSize: 12px;
 @smallFontSize: 11px;
