--- a/src/views/tree.less
+++ b/src/views/tree.less
@@ -1,8 +1,9 @@
 @import "../vars";
 
-@tree-operation-color: @textColor3;
+@treeOperationColor: @textColor4;
+@treeNodeHeight: 18px;
 
-.tree {
+.tree, body {
     position: relative;
     color: @textColor1_5;
 
@@ -11,20 +12,22 @@
         padding: 0 0 0 12px;
 
         &.drag-over-top > .content::before {
-            border-top: 1px solid @tree-operation-color;
+            border-top: 1px solid @treeOperationColor;
         }
         &.drag-over-middle > .content::before {
-            border: 1px solid @tree-operation-color;
+            border: 1px solid @treeOperationColor;
         }
         &.drag-over-bottom > .content::before {
-            border-bottom: 1px solid @tree-operation-color;
+            border-bottom: 1px solid @treeOperationColor;
         }
 
         > .content {
             position: relative;
-            padding: 2px 0px 2px 0px;
+            height: @treeNodeHeight;
             z-index: 10;
+            line-height: @treeNodeHeight;
             cursor: default;
+            font-size: @smallFontSize;
             .noselect;
 
             .icon {
@@ -40,8 +43,8 @@
                 left: 0;
                 box-sizing: border-box;
                 width: 100%;
-                height: 17px;
-                content: '';
+                height: @treeNodeHeight;
+                content: ' ';
                 z-index: 0;
                 background: transparent;
             }
@@ -61,7 +64,7 @@
             left: 0;
             box-sizing: border-box;
             width: 100%;
-            height: 17px;
+            height: @treeNodeHeight;
             content: '';
             z-index: 0;
             background: transparent;
